[gd_scene load_steps=78 format=3 uid="uid://dpce6f6m8gtk3"]

[ext_resource type="Texture2D" uid="uid://bvyhepiwqq827" path="res://assets/select level/Animation sprite.PNG" id="1_v030w"]
[ext_resource type="Script" uid="uid://dfspqt2ry62pd" path="res://scripts/main menu/fsm/state_machine.gd" id="2_0qncq"]
[ext_resource type="Script" uid="uid://bflr4hh75rv2e" path="res://scripts/main menu/interactive_book.gd" id="2_sltcf"]
[ext_resource type="Texture2D" uid="uid://cil3g4bvil2ha" path="res://assets/select level/lvl selection photo format.png" id="3_24scs"]
[ext_resource type="Script" uid="uid://c07enjsivj23m" path="res://scripts/main menu/fsm/idle_state.gd" id="4_yletg"]
[ext_resource type="Script" uid="uid://dnrh37kt5r4du" path="res://scripts/main menu/fsm/flipping_state.gd" id="5_avk54"]
[ext_resource type="Script" uid="uid://cobxmxc5if4bt" path="res://scripts/main menu/fsm/reading_state.gd" id="5_yletg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_24scs"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0sq5"]
atlas = ExtResource("1_v030w")
region = Rect2(3840, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvss7"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_duhnk"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjjrk"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnml1"]
atlas = ExtResource("1_v030w")
region = Rect2(7680, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qn7e"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyslg"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb7p1"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fe6y"]
atlas = ExtResource("1_v030w")
region = Rect2(3840, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn1bl"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_uantw"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnpga"]
atlas = ExtResource("1_v030w")
region = Rect2(7680, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1j1p"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgdb4"]
atlas = ExtResource("1_v030w")
region = Rect2(3840, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_x83lf"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr1bv"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8uf1"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_4syqw"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak6ax"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tegn"]
atlas = ExtResource("1_v030w")
region = Rect2(7680, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sj6p"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_1axl4"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wvug"]
atlas = ExtResource("1_v030w")
region = Rect2(3840, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_s01tt"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_cynmm"]
atlas = ExtResource("1_v030w")
region = Rect2(7680, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_owqc3"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2dac"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lxg8"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fa1r"]
atlas = ExtResource("1_v030w")
region = Rect2(3840, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e7qb"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xl22"]
atlas = ExtResource("1_v030w")
region = Rect2(7680, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8k5s"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_0njj5"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mntb"]
atlas = ExtResource("1_v030w")
region = Rect2(3840, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki4ep"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_cca28"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh3u7"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_0p72w"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bn4y"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6iwf"]
atlas = ExtResource("1_v030w")
region = Rect2(3840, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldmi0"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsig1"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_admff"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_krvcw"]
atlas = ExtResource("1_v030w")
region = Rect2(3840, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_x72ne"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uix2"]
atlas = ExtResource("1_v030w")
region = Rect2(7680, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d4r1"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic0ni"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyu87"]
atlas = ExtResource("1_v030w")
region = Rect2(3840, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdrbb"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_svetv"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrpkf"]
atlas = ExtResource("1_v030w")
region = Rect2(3840, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcuru"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_goa7e"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxv5j"]
atlas = ExtResource("1_v030w")
region = Rect2(7680, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhsl8"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqf6y"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlb4i"]
atlas = ExtResource("1_v030w")
region = Rect2(3840, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_s11nd"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynr6b"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aqgk"]
atlas = ExtResource("1_v030w")
region = Rect2(7680, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_23pdd"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfm8t"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovq0j"]
atlas = ExtResource("1_v030w")
region = Rect2(3840, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a4t6"]
atlas = ExtResource("1_v030w")
region = Rect2(1920, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_sngtr"]
atlas = ExtResource("1_v030w")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_aafrl"]
atlas = ExtResource("1_v030w")
region = Rect2(7680, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u8ne"]
atlas = ExtResource("1_v030w")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="SpriteFrames" id="SpriteFrames_ikw14"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24scs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0sq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvss7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duhnk")
}],
"loop": false,
"name": &"close_from_first",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjjrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnml1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qn7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyslg")
}],
"loop": false,
"name": &"close_from_last",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb7p1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fe6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn1bl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uantw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnpga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1j1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgdb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x83lf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr1bv")
}],
"loop": false,
"name": &"close_from_middle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8uf1")
}],
"loop": false,
"name": &"closed_back",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4syqw")
}],
"loop": false,
"name": &"closed_front",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak6ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tegn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sj6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1axl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wvug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s01tt")
}],
"loop": false,
"name": &"next_from_first",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cynmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owqc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2dac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lxg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fa1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e7qb")
}],
"loop": false,
"name": &"next_page",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xl22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8k5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0njj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mntb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki4ep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cca28")
}],
"loop": false,
"name": &"next_to_last",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh3u7")
}],
"loop": false,
"name": &"open_first",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p72w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bn4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6iwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldmi0")
}],
"loop": false,
"name": &"open_to_first",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsig1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_admff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krvcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x72ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uix2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d4r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic0ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyu87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdrbb")
}],
"loop": false,
"name": &"open_to_last",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svetv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrpkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcuru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_goa7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxv5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhsl8")
}],
"loop": false,
"name": &"previous_from_last",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqf6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlb4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s11nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynr6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aqgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23pdd")
}],
"loop": false,
"name": &"previous_page",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfm8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovq0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a4t6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sngtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aafrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u8ne")
}],
"loop": false,
"name": &"previous_to_first",
"speed": 10.0
}]

[node name="InteractiveBook" type="AnimatedSprite2D"]
position = Vector2(574, 324)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_ikw14")
animation = &"open_to_last"
autoplay = "closed_front"
script = ExtResource("2_sltcf")
page_count = 4

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NextPageButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = -403.3333
offset_right = 830.0
offset_bottom = 433.3333

[node name="PreviousPageButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = -840.0
offset_top = -416.66663
offset_right = -1.000061
offset_bottom = 460.33337

[node name="CloseButton" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = -16.666664
offset_top = 506.66666
offset_right = 58.333336
offset_bottom = 544.6666
theme_override_font_sizes/font_size = 21
text = "Closed"

[node name="LeftLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = -566.6666
offset_top = -218.33331
offset_right = -254.33331
offset_bottom = -161.0
focus_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "asdwasdwasdw"
selection_enabled = true

[node name="LeftLabel2" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = -596.6666
offset_top = 130.00002
offset_right = -280.33325
offset_bottom = 185.00002
focus_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "aawasdwasdw"
selection_enabled = true

[node name="RightLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 343.33328
offset_top = -231.66666
offset_right = 696.6666
offset_bottom = -171.66666
focus_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "asdwasdwasdwa"
selection_enabled = true

[node name="RightLabel2" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 215.00003
offset_top = 94.999985
offset_right = 559.0
offset_bottom = 157.99997
focus_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "asdwasdwasdwa"
selection_enabled = true

[node name="LeftTitle" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = -569.99994
offset_top = -401.66666
offset_right = -380.99994
offset_bottom = -292.3333
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 64
text = "sdaw"

[node name="RightTitle" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 304.99994
offset_top = -366.66666
offset_right = 685.9999
offset_bottom = -213.33334
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 64
text = "asdwa"

[node name="Photos" type="Node2D" parent="Control"]
position = Vector2(-646.6666, -406.66666)

[node name="Photo" type="Sprite2D" parent="Control/Photos"]
position = Vector2(-33.333324, 281.66663)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_24scs")

[node name="Photo2" type="Sprite2D" parent="Control/Photos"]
position = Vector2(420.00006, 660)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_24scs")

[node name="Photo3" type="Sprite2D" parent="Control/Photos"]
position = Vector2(1259.9998, 616.6667)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_24scs")

[node name="Photo4" type="Sprite2D" parent="Control/Photos"]
position = Vector2(885, 263.33322)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_24scs")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_0qncq")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("4_yletg")

[node name="FlippingState" type="Node" parent="StateMachine"]
script = ExtResource("5_avk54")

[node name="ReadingState" type="Node" parent="StateMachine"]
script = ExtResource("5_yletg")

[connection signal="button_down" from="Control/NextPageButton" to="StateMachine/ReadingState" method="_on_next_page_button_down"]
[connection signal="button_down" from="Control/PreviousPageButton" to="StateMachine/ReadingState" method="_on_previous_page_button_down"]
[connection signal="button_down" from="Control/CloseButton" to="StateMachine/ReadingState" method="_on_close_button_down"]
